--- a/work/ansible/playbooks/loadbalancer.yml
+++ b/work/ansible/playbooks/loadbalancer.yml
@@ -1,2 +1,7 @@
 ---
--hosts:
+- hosts: loadbalancer
+become: true
+  tasks: 
+    - name: install nginx
+      apt: name=nginx state=present update_cache=yes
+
