--- a/work/ansible/playbooks/loadbalancer.yml
+++ b/work/ansible/playbooks/loadbalancer.yml
@@ -1,7 +1,9 @@
 ---
 - hosts: loadbalancer
-become: true
+  become: true
   tasks: 
     - name: install nginx
       apt: name=nginx state=present update_cache=yes
 
+    - name: ensure nginx started
+      service: name=nginx state=started enabled=yes
